[gd_scene load_steps=9 format=3 uid="uid://c62ipiuqujjya"]

[ext_resource type="Script" path="res://Assets/Port v2/blueberry_port_2.gd" id="1_bl1ov"]
[ext_resource type="Texture2D" uid="uid://sw8mtntg8qh7" path="res://Assets/Opdelt porte/blueberry_h.png" id="1_su4id"]
[ext_resource type="Texture2D" uid="uid://bv4ktiksiom30" path="res://Assets/Opdelt porte/blueberry_v.png" id="2_qru37"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ww86"]
size = Vector2(66, 20)

[sub_resource type="Animation" id="Animation_7ylap"]
resource_name = "blueberry_port_open_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blueberry_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(33, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blueberry_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, 0), Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_8224c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blueberry_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blueberry_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-33, 0)]
}

[sub_resource type="Animation" id="Animation_uyomw"]
resource_name = "blueberry_port_close_2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blueberry_h_2:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(33, 0), Vector2(17, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blueberry_v_2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-33, 0), Vector2(-13, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ndf3m"]
_data = {
"RESET": SubResource("Animation_8224c"),
"blueberry_port_close_2": SubResource("Animation_uyomw"),
"blueberry_port_open_2": SubResource("Animation_7ylap")
}

[node name="blueberry_port_2" type="StaticBody2D"]
script = ExtResource("1_bl1ov")

[node name="blueberry_h_2" type="Sprite2D" parent="."]
position = Vector2(17, 0)
texture = ExtResource("1_su4id")

[node name="blueberry_v_2" type="Sprite2D" parent="."]
position = Vector2(-33, 0)
texture = ExtResource("2_qru37")

[node name="blueberry_port_collision_2" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_4ww86")

[node name="ap_blueberry_2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ndf3m")
}

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="close_port"]
